<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, TVBoxMainMenuActivity!</string>
    <string name="app_name">Digtal TV Player</string>
    <string name="main_menu">Main Menu</string>
    <string name="rescan_tip">Scan again will clear all remain channels!\nDo you want to scan channel now?</string>
    <string name="scan_tip">Do you want to scan channel now?</string>
    <string name="scan_again">Do you want to scan channel again?</string>
    <string name="rescan_title">Scan again!</string>
    <string name="no_channel_tip">No channel!</string>
    <string name="scan_mode">Please select scan mode!</string>
    <string name="select_freq">Please select a frequency:</string>
    <string name="select_subtitle">Please select a subtitle:</string>
    <string name="select_teletxt">Please select a teletext:</string>
    <string name="auto_scan">Auto Scan</string>
    <string name="manual_scan">Manual Scan</string>
    <string name="str_ok">OK</string>
    <string name="str_cancel">Cancel</string>
    <string name="start_scan">Start scan</string>
    
    <string name="disable_subtitle">Disable subtitles</string>
    <string name="disable_teletxt">Disable teletext</string>
    
    <string name="program_list">Programs List</string>
    <string name="service_list">Services List</string>
    <string name="summaryTitle">Summary</string>
    
    <string name="path">/sdcard/test0.mp4</string>  
    
    <string name="epg_help">Up/Down key to scroll, Left/Right key to switch, Enter key to play</string>
    <string name="summary">Please select a frequency:</string>
    
    <string name="about_help">
    					快捷操作技巧:\n\n
    					全屏切换：\t双击屏幕\n\n
    					播放/暂停：\t长按屏幕\n\n
    					静音/恢复：\t长按音量按钮\n\n
    					播放列表：\t控制面板最右边的按钮(目前暂不支持编辑功能)\n\n
    					音量调节：\t单击音量按钮，在弹出的音量显示区域触摸改变音量\n\n\n
    					</string>
    					
    <string name="rightArrow">></string>
    
    <string name="general_setting">General</string>
    <string name="scan">Scan</string>
    
    <string name="area_set">Area set</string>
    <string name="order_set">Service list order set</string>
    <string name="date_time" formatted="false">Date &#38; time</string>
    <string name="scan_channels">Channel Search</string>
    
    <string name="waitTitle">Loading</string>
    <string name="waitBody">Please wait...</string>
    
    <string name="noContent">No Content!</string>
    
    <string name="recordFailed">Record Failed, maybe no or bad signal!</string> 
    <string name="recordSuccess">Record Success, please copy the record TS file from Flash Storage!</string>      
    <string name="recordFinish">Record</string>           
    <string name="teletext_picker_interver">-----</string>           
    <string name="dialog_set_number">Set</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_picker_title">Choose a number</string>
    
    
    <string name="tab_subtitle">Subtitle</string>
    <string name="tab_teletxt">Teletext</string>
    <string name="tab_audio">Audio</string>
    <string name="tab_scale">Scale</string>
    <string name="tab_info">Information</string>
    
    <string name="choose_service">Service choose</string>
    
    <string name="dtv_num">DTV:0</string>
    <string name="radio_num">Radio:0</string>
    
    <string name="freq_label">Download Freq.(MHz)</string>
    <string name="lnbfreq_label">LNB Freq.(MHz)</string>    
    <string name="rate_label">Symbol Rate(KS/s)</string>
    <string name="pol_label">Polarization</string>
    <string name="pol_ver">VERTICAL</string>
    <string name="s22k_mode">22K Mode</string>
    <string name="s22kmode_label">22K Mode</string>    
    <string name="channel_search">Channel Search</string>
    
    <string name="input_freq">Please input "Download Freq."</string>
    <string name="input_lnbfreq">Please input "LNB Freq."</string>    
    <string name="input_rate">Please input "Symbol Rate"</string>

    <string name="no_signal">No signal!</string>
    <string name="alert">Alert</string>
    
    
    <string name="frontend_label">Frontend Type:</string>
    <string name="dvbt_label">DVB-T</string>
    <string name="isdbt_oneseg_label">ISDB-T 1 seg</string>
    <string name="isdbt_fullseg_label">ISDB-T full seg</string>    
    <string name="atsct_label">ATSC-T</string>        
    
    <string name="frequency_label">Frequency:</string>
    <string name="bandwidth_label">Bandwidth:</string>
    <string name="area_label">Area:</string>
    
    
    <string name="area_sel">Please select an area:</string>
    <string name="freq_sel">Please select a frequency:</string>
    <string name="band_sel">Please select a bandwidth:</string>
    <string name="scan_lcn">scan LCN</string>
    
</resources>
